Fix comments on mobile view

--- a/styles/scss/components/_modal.scss
+++ b/styles/scss/components/_modal.scss
@@ -8,11 +8,15 @@
   .modal-dialog {
     position: fixed;
     margin: auto;
-    width: 400px;
+    width: 576px;
     max-width: 100%;
     height: 100%;
     box-shadow: $gray-600 0px 4px 12px;
     transform: translate3d(0%, 0, 0);
+
+    @media (min-width: 576px) {
+      width: 400px;
+    }
   }
 
   .modal-content {
